Upgrade to latest Quarkus, JDK 21